autobuilder (4.1) unstable; urgency=low

  * Use rewritten Debian.VersionPolicy module, vendor tags will always
    be added to version numbers unless the --do-not-change-version flag
    is given.

 -- David Fox <ddssff@gmail.com>  Mon, 28 Jan 2008 13:54:03 -0800

autobuilder (4.0) unstable; urgency=low

  * Changes for GHC 6.8.2.
  * Improvements in build dependency computation

 -- David Fox <dsf@seereason.com>  Mon, 21 Jan 2008 20:49:03 +0000

autobuilder (3.9) unstable; urgency=low

  * Darcs targets can have a tag, appended to the URI following an equals sign
    similar to the way apt targets can specify a version number:
       darcs:http://http://darcs.haskell.org/crypto=4.0.3
    The --tag argument will be passed to darcs get if a tag is given.

 -- David Fox <dsf@seereason.org>  Wed,  7 Nov 2007 09:11:07 -0800

autobuilder (3.8) unstable; urgency=low

  * Cache prepared AptImage objects in the AptIO IOState so we don't
    keep running apt-get update on them (which, as Cliff points out,
    is not only slow, but incorrect.)

 -- David Fox <ddssff@gmail.com>  Sat, 20 Oct 2007 17:01:47 +0000

autobuilder (3.7) unstable; urgency=low

  * Compenste for changes in haskell-debian library
  * Use read' instead of read to see what text failed
  * Targets to build all haskell packages
  * Add an Autobuilder-Email parameter to autobuilder to give the address
    the autobuilder uses in the changelog entries it generates.

 -- David Fox <ddssff@gmail.com>  Thu, 11 Oct 2007 20:57:10 +0000

autobuilder (3.6) unstable; urgency=low

  * Newdist shouldn't depend on freespire-archive-keyring, make it a
    "Suggests:".
  * Use the external haskell-debian and haskell-extra libraries rather
    than internal copies.
  * Make the example in "Example/local" the real, working version for
    seereason.org, and add a comment about how to change it for other
    locations.

 -- David Fox <ddssff@gmail.com>  Thu,  4 Oct 2007 21:40:02 -0700
