@@ -3,6 +3,9 @@ autobuilder (4.1) unstable; urgency=low
   * Use rewritten Debian.VersionPolicy module, vendor tags will always
     be added to version numbers unless the --do-not-change-version flag
     is given.
+  * Configuration updates to use new merged ubuntu and debian repositories.
+  * Add a Release-Alias parameter, to tell autobuilder to use bpo40+ for
+    the etch release name when constructing versions.
 
  -- David Fox <ddssff@gmail.com>  Mon, 28 Jan 2008 13:54:03 -0800
 
